--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ rodio = { version = "0.17", default-features = false }
 embed-manifest = "1"
 parking_lot = "0.12"
 serde_json = "1"
-eframe = "0.24"
+eframe = { version = "0.24", features = ["persistence"] }
 thiserror = "1"
